--- a/fro/my-react-app/package.json
+++ b/fro/my-react-app/package.json
@@ -1,17 +1,12 @@
 {
-  "name": "umis-frontend",
+  "name": "my-react-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@heroicons/react": "^1.0.6",
-    "axios": "^1.8.4",
     "cra-template": "1.3.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
-    "react-icons": "^5.5.0",
-    "react-router-dom": "^7.5.0",
-    "react-scripts": "5.0.1",
-    "react-signature-canvas": "^1.1.0-alpha.2"
+    "react-scripts": "5.0.1"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -36,8 +31,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "tailwindcss": "^3.4.17"
   }
 }
